# virtuoso-opensource

./: .cvsignore  .cvsrc  .gitignore  .indent.pro  .profile  .travis.yml  AUTHORS  COPYING.md  CREDITS  CREDITS.md  ChangeLog  Dockerfile  INSTALL.md  LICENSE  LICENSE.md  Makeconfig.in  Makefile.am  NEWS  NEWS.md  README  README-sesame3.md  README.ANYTIME.md  README.CVS  README.GIT  README.GIT.md  README.GeoSPARQL.md  README.MACOSX.md  README.OpenSSL.md  README.UPGRADE  README.UPGRADE.md  README.WINDOWS  README.WINDOWS.md  README.hibernate  README.hibernate.md  README.jena  README.jena.md  README.jsse  README.jsse.md  README.md  README.php5  (+10 more)
appsrc/ODS-Blog/: .cvsignore  .gitignore  Makefile.am  ODS-Blog.dox  atom_pub.sql  blog.sql  blog_api.sql  conv.sql  dav_browser.sql  gdata.sql  index.vsp  index.vspx  install.sql  make_vad.sh  sioc_blog.sql  sioc_blog_new.sql  template.sql  trackback.sql  uninst.sql  vad_version  wa_integration.sql  wa_search_blog.sql
appsrc/ODS-Briefcase/: .cvsignore  .gitignore  Makefile.am  ODS-Briefcase.dox  make_vad.sh  vad_version
appsrc/ODS-Calendar/: .cvsignore  .gitignore  Makefile.am  ODS-Calendar.dox  make_vad.sh  vad_version
appsrc/ODS-Discussion/: .cvsignore  .gitignore  DET_nntp.sql  Makefile.am  ODS-Discussion.dox  attachment.vsp  drop.sql  login.vspx  mail_notify.sql  main.xsl  make_vad.sh  nntpf.css  nntpf_addtorss.vspx  nntpf_adv_search.vspx  nntpf_api.sql  nntpf_browser.vspx  nntpf_ddl.sql  nntpf_disp_article.vspx  nntpf_edit_rss.vspx  nntpf_error.vsp  nntpf_error.vspx  nntpf_logout.vspx  nntpf_main.vspx  nntpf_nthread_view.vspx  nntpf_odsnewsgroups_admin.vspx  nntpf_post.vspx  nntpf_preferences.vspx  nntpf_rss_del.vspx  nntpf_rss_group.vspx  nntpf_rss_list.vspx  nntpf_subs.vspx  nntpf_subs_edit.vspx  nntpf_subs_group.vspx  nntpf_subs_remove.vspx  nntpf_tags.sql  nntpf_thread_view.vspx  nntpf_warning.vsp  nntpf_web_svc.sql  nntpf_yacutia.vspx  openid.js  (+10 more)
appsrc/ODS-FeedManager/: .cvsignore  Makefile.am  ODS-FeedManager.dox  make_vad.sh  vad_version
appsrc/ODS-Framework/: .cvsignore  .gitignore  CalendarPopup.js  Mainpage.dox  Makefile.am  ODS-Framework.dox  SWD.sql  aboutus.html  access_box.vsp  access_google.vsp  access_skydrive.vsp  accounts.vspx  add_rule.vspx  admin.vspx  advertise.html  afoaf.xml  apml.vsp  app.js  app.vspx  app_inst.vspx  app_instance_limits.vspx  app_menu.js  app_menu_settings.vspx  app_my_inst.vspx  app_sent_inv.vspx  app_settings.vspx  back_nav.vspx  cert.vsp  common.css  common.js  community.vspx  conf.vspx  conf_app.vspx  contact.html  dashboard.sql  dav.css  default.css  delete_inst.vspx  dock.css  drop.sql  (+221 more)
appsrc/ODS-WebMail/: .cvsignore  Makefile.am  make_vad.sh  vad_version
appsrc/ODS-Wiki/: .cvsignore  .gitignore  Makefile.am  ODS-Wiki.dox  api.sql  atom.sql  conv.sql  drop.sql  drop_proc.sql  errors.sql  export.sql  generate_drop_proc.sh  make_vad.sh  plugins.sql  postinstall.sql  proc_on.sql  proc_on_api.sql  proc_on_macro.sql  proc_on_vsp.sql  proc_tmp.sql  redirect.vsp  retry.sh  schema_on.sql  semantics.sql  setup.isql  setup_vad.sql  sioc.sql  upstream.sql  vad_version  wa_integration.sql  wa_search_wiki.sql  webmail.sql
binsrc/: Makefile.am
binsrc/VirtuosoClient.Net/: .cvsignore  .gitignore  ArrayOfLongPacked.cs  AssemblyInfo.cs  BlobHandle.cs  BufferType.cs  CLI.cs  ConnectionOptions.cs  ConnectionPool.cs  ConnectionStringParser.cs  DTC.cs  DataType.cs  DateTimeMarshaler.cs  Diagnostics.cs  Era.cs  ExplicitString.cs  Future.cs  FutureList.cs  IConvertData.cs  ICreateErrors.cs  IInnerCommand.cs  IInnerConnection.cs  IMarshal.cs  ISession.cs  IVirtuosoError.cs  InnerConnectionBase.cs  MD5.cs  Makefile.am  Makefile.mono  ManagedCommand.cs  ManagedConnection.cs  ManagedErrors.cs  Marshaler.cs  MemoryHandle.cs  OdbcCommand.cs  OdbcConnection.cs  OdbcErrors.cs  ParameterData.cs  Platform.cs  RPC.cs  (+34 more)
binsrc/b3s/: .gitignore  Makefile.am  b3s_cl_rexec.sql  b3sq.sql  bbc_demo_queries.vsp  cl_prx.sql  complete.sql  complete_cl.sql  complete_ddl.sql  complete_single.sql  complete_svc.sql  demo_queries.vsp  facet.js  facet.sql  facet.vsp  facet_agg.sql  facet_doc.html  facet_svc.sql  facet_test.sql  facet_text.xsl  facet_view.sql  fct_drop_cond.xsl  fct_drop_text.xsl  fct_inx.sql  fct_req.xsl  fct_resp.xsl  fct_set_agg.xsl  fct_set_default.xsl  fct_set_graphs.xsl  fct_set_loc.xsl  fct_set_text.xsl  fct_set_view.xsl  fct_strip_loc.xsl  fct_vsp.xsl  grants.sql  install.html  isparql_describe.xsl  make_vad.sh  ns.sql  nsdecl.sql  (+10 more)
binsrc/bpel/: .cvsignore  1Mile.txt  Makefile.am  activity.vspx  activity.xsl  asyncall.vsp  bpel.vsp  bpel.xsd  bpel_adaptor.cs  bpel_confirm.vspx  bpel_ddl.sql  bpel_decor.vspx  bpel_eng.sql  bpel_intrp.sql  bpel_login.vspx  bpel_login_new.vspx  bpel_navigation_bar.vspx  bpel_plinks.xsl  bpel_style.xsl  bpel_style_new.xsl  bpel_ui_bpelwsdl_edit.vspx  bpel_ui_bpelwsdl_register.vspx  bpel_ui_import.vspx  bpel_ui_import2.vspx  bpelcomp.xsl  bpelexpn.xsl  bpelimport.xsl  bpelmsg.xsl  bpelmsgen.xsl  bpeloper.xsl  bpelstatus.xsl  bpelv.xsd  bpelwsdl.xsl  bpelx.xsd  browser.vspx  common.xsl  configure.vspx  debug.vsp  default.css  drop.sql  (+39 more)
binsrc/cached_resources/: .cvsignore  Makefile.am  cache_gen.sh  cached_resources.c  res_to_c.awk
binsrc/conductor/: .gitignore  Makefile.am  README  account_create.vspx  account_key_remove.vspx  account_remove.vspx  accounts.vspx  accounts_page.vspx  adm_login.vspx  adm_navigation_bar.vspx  admin_utils.js  back_nav.vspx  bpel_service.vspx  capabilities.vspx  caps_browser.vspx  caps_cols_browser.vspx  cond_common.js  cond_help.css  cond_help.html  cond_help.js  cond_help.xsl  conductor.list  conductor_sticker.xml  cont_management.vspx  cont_management_types.vspx  cont_page.vspx  cont_type_edit.vspx  cont_type_remove.vspx  csv_patterns.vspx  dashboard.vspx  dashboard_item.vspx  dashboard_item_show.vspx  dashboard_item_show.xsl  databases.vspx  databases_drop.vspx  databases_export.vspx  databases_grants.vspx  databases_proc_edit.vspx  databases_table_constraints.vspx  (+299 more)
binsrc/dav/: dav.sql  (+47 more)
libsrc/: .cvsignore  Dk.h  Makefile.am  libutil.h
(+9726 files in other folders)
